--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
 <body class="main-content">
-    <header class="section sec1 header"  id="home">
+    <header class="section sec1 header active"  id="home">
         <div class="header-content">
             <div class="left-header">
                 <div class="h-shape"></div>
@@ -40,7 +40,7 @@
         </div>
         </header>
     <main>
-        <section class="section sec2 about " id="about">
+        <section class="section sec2 about  " id="about">
             <div class="main-title">
                 <h2>About <span> me</span> </h2>
             </div>
@@ -196,7 +196,7 @@
                  </div>
             </div>
         </section>
-        <section class="section sec3 portfolio active"  id="portfolio">
+        <section class="section sec3 portfolio "  id="portfolio">
             <div class="main-title">
                 <h2>My <span> Portfolio</span> </h2>
             </div>
@@ -255,7 +255,7 @@
             </div>
         </section>
         <section class="section sec4 blogs"  id="blogs"></section>
-        <section class="section sec5 contact "  id="contact">
+        <section class="section sec5 contact"  id="contact">
             <div class="contact-container">
                 <div class="main-title">
                     <h2>Contact <span> Me</span> </h2>
@@ -340,7 +340,7 @@
     </main>
 
     <div class="controls">
-        <div class="control control-1 " data-id="home">
+        <div class="control control-1 active-btn" data-id="home">
             <i class="fas fa-home"></i>
         </div>
         <div class="control control-2" data-id="about">
@@ -352,7 +352,7 @@
         <!-- <div class="control control-4" data-id="blogs">
             <i class="fas fa-newspaper"></i>
         </div> -->
-        <div class="control control-5 active-btn" data-id="contact">
+        <div class="control control-5 " data-id="contact">
             <i class="fas fa-envelope-open"></i>
         </div>
     </div>
