resume download fix

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     as I work on personal projects in the future :)
                 </p>
                 <div class="btn-container">
-                    <a href="/static_files/Resume.docx" class="main-btn">
+                    <a href="/static_files/Resume.docx" download class="main-btn">
                         <span class="btn-text">Download Resume</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
@@ -55,7 +55,7 @@
                    Welcome to my page! 
                    <br><br>
                     <div class="btn-container">
-                        <a href="/static_files/Resume.docx" class="main-btn">
+                        <a href="/static_files/Resume.docx" download class="main-btn">
                             <span class="btn-text">Download Resume</span>
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
                         </a>
@@ -327,7 +327,7 @@
                                 <textarea name="" required cols="15" rows="10" placeholder="Message here.."></textarea>
                             </div>
                             <div class="submit-btn">
-                                <a href="static_files/Resume.docx" class="main-btn">
+                                <a href="static_files/Resume.docx" download class="main-btn">
                                     <span class="btn-text">Download Resume</span>
                                     <span class="btn-icon"><i class="fas fa-download"></i></span>
                                 </a>
